# mmdb-creator

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dprint.jsonc  mise.toml  rust-toolchain.toml
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: module-and-project-structure.md  testing-patterns.md
.devcontainer/: devcontainer.json  postStartCommand.sh
.githooks/: post-checkout
.github/: project-config.json
.github/actions/act-actionlint/: action.yaml
.github/actions/act-audit/: action.yaml
.github/actions/act-codeql/: action.yaml
.github/actions/act-docs-ci/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/graft/: config.yaml
.github/workflows/: _orchestrator.yaml  cleanup.yaml  miri.yaml  release-manager.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: tasks.toml
ast-rules/: no-real-ipv4.yml  no-real-ipv6.yml
crates/mmdb-cli/: Cargo.toml
crates/mmdb-cli/src/: backup.rs  cli.rs  main.rs  report.rs  validate.rs
crates/mmdb-cli/src/enrich/: fields.rs  mod.rs  tui.rs
crates/mmdb-cli/src/import/: mod.rs
crates/mmdb-cli/src/mmdb_query/: mod.rs
crates/mmdb-cli/src/scan/: mod.rs
crates/mmdb-cli/src/telemetry/: conventions.rs
crates/mmdb-cli/src/telemetry/metrics/: mod.rs
crates/mmdb-cli/tests/: integration_test.rs
crates/mmdb-core/: Cargo.toml
crates/mmdb-core/src/: backup.rs  build.rs  config.rs  config_template.toml  external.rs  lib.rs  types.rs
crates/mmdb-creator/: Cargo.toml
crates/mmdb-creator/src/: cache.rs  cli.rs  main.rs  validate.rs
crates/mmdb-creator/src/export/: mod.rs
crates/mmdb-creator/src/import/: mod.rs
crates/mmdb-creator/src/scan/: daemon.rs  enrich.rs  mod.rs  resume.rs  socket.rs  writer.rs
crates/mmdb-creator/src/telemetry/: conventions.rs
crates/mmdb-creator/src/telemetry/metrics/: mod.rs
crates/mmdb-creator/tests/: integration_test.rs
crates/mmdb-dns/: Cargo.toml
crates/mmdb-dns/src/: cymru.rs  lib.rs  ptr.rs  resolver.rs  types.rs
crates/mmdb-scan/: Cargo.toml
crates/mmdb-scan/src/: backup.rs  daemon.rs  enrich.rs  gw.rs  lib.rs  normalize.rs  ptr_parse.rs  resume.rs  socket.rs  writer.rs  xlsx_match.rs
crates/mmdb-web/: Cargo.toml
crates/mmdb-web/src/: lib.rs
crates/mmdb-web/src/report/: mod.rs  sankey.rs  template.rs
crates/mmdb-whois/: Cargo.toml
crates/mmdb-whois/src/: client.rs  import.rs  lib.rs  prefix.rs  rpsl.rs
crates/mmdb-xlsx/: Cargo.toml
crates/mmdb-xlsx/src/: address.rs  filter.rs  import.rs  lib.rs  reader.rs  writer.rs
crates/mmdb-xlsx/tests/: integration_test.rs
data/exsample/: IPAM_20260401r3.xlsx  IPAM_bb_20260517r5.xlsx  IPAM_host_20260517r2.xlsx
docs/: DESIGN.md  testdata-policy.md
docs/specs/: 2026-05-06-mmdb-xlsx-design.md  2026-05-06-scan-scamper-design.md  2026-05-06-validate-subcmd-design.md  2026-05-06-workspace-split-design.md  2026-05-08-force-flag-design.md  2026-05-09-rotating-backup-design.md  architecture.md
docs/specs/components/: backup.md  mmdb-web.md  sankey.md  scan-resume.md  whois-client.md  xlsx-match.md
docs/specs/plans/: 2026-05-10-mmdb-subcommand-group.md
docs/specs/subcommands/: build.md  enrich.md  import.md  mmdb.md  report.md  scan.md  validate.md
