[package]
name = "mmdb-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
calamine = { workspace = true }
indexmap = { workspace = true }
ipnet = { workspace = true }
mmdb-core = { path = "../mmdb-core" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
